--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/tanyamelnyk19/practice10-localeStorage.git"
   },
   "keywords": [],
-  "author": "Tanya Melnyk <den.tani19@gmail.com>",
+  "author": "Tanya Melnyk",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/tanyamelnyk19/practice10-localeStorage"
