--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "homepage": "https://tanyamelnyk19.github.io/practice10-localeStorage",
   "scripts": {
-    "start": "parcel src/*.html",
+    "start": "parcel src/*.html --port 3000",
     "build": "parcel build src/*.html --public-url /practice10-localeStorage/"
   },
   "repository": {
@@ -18,7 +18,10 @@
     "url": "https://github.com/tanyamelnyk19/practice10-localeStorage"
   },
   "dependencies": {
-    "modern-normalize": "^1.1.0"
+    "@vimeo/player": "^2.23.0",
+    "lodash.throttle": "^4.1.1",
+    "modern-normalize": "^1.1.0",
+    "simplelightbox": "^2.14.3"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
